<resources>
    <string name="app_name">Kita Bank</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_customers">Customers</string>
    <string name="view_all_customer">View All Customer</string>
    <string name="customer_fragment_label">All Customers</string>
    <string name="transaction_fragment_label">Transaction History</string>
    <string name="transfer">Transfer</string>
    <string name="name">Name</string>
    <string name="account_number">Account No.</string>
    <string name="available_balance">Available Balance</string>
    <string name="current_balance">Current Balance</string>
    <string name="phone_number">Phone No.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_fragment_label">Transfer to</string>
    <string name="dialog_title">Transfer Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="customer_details">Customer Details</string>
    <string name="title">Kita Bank</string>
</resources>