<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.basicbankingapp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_customer"
            app:destination="@id/navigation_customer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.basicbankingapp.TransactionFragment"
        android:label="@string/transaction_fragment_label"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_customer"
        android:name="com.example.basicbankingapp.CustomersFragment"
        android:label="@string/customer_fragment_label"
        tools:layout="@layout/fragment_customers" >
        <action
            android:id="@+id/action_navigation_customer_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.basicbankingapp.DetailsFragment"
        android:label="@string/customer_details" >
        <argument
            android:name="account_number"
            app:argType="string" />
        <action
            android:id="@+id/action_detailsFragment_to_transferFragment"
            app:destination="@id/transferFragment" />
        <argument
            android:name="sender_available_balance"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/transferFragment"
        android:name="com.example.basicbankingapp.TransferFragment"
        android:label="@string/transfer_fragment_label" >
        <argument
            android:name="account_number"
            app:argType="string" />
        <argument
            android:name="sender_available_balance"
            app:argType="string" />
        <action
            android:id="@+id/action_transferFragment_to_navigation_customer"
            app:destination="@id/navigation_customer"
            app:popUpTo="@id/navigation_customer"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>