<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsFragment"
            type="com.example.basicbankingapp.DetailsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_padding"
            app:layout_constraintBottom_toTopOf="@id/transfer_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/indigo_500"
            app:strokeWidth="2dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/margin_between_elements"
                android:paddingBottom="@dimen/margin_between_elements">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/image_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/side_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <ImageView
                        android:layout_width="@dimen/profile_picture_size"
                        android:layout_height="@dimen/profile_picture_size"
                        android:importantForAccessibility="no"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_person" />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/name_textView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_between_elements"
                    android:layout_marginTop="50dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_profile" />

                <TextView
                    android:id="@+id/name_details"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    app:layout_constraintBottom_toBottomOf="@id/name_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/name_textView"
                    tools:text="Name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@id/account_number_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_textView" />

                <TextView
                    android:id="@+id/account_number_textView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    android:text="@string/account_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_textView" />

                <TextView
                    android:id="@+id/account_number_details"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    app:layout_constraintBottom_toBottomOf="@id/account_number_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/account_number_textView"
                    tools:text="@string/account_number" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@id/phone_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/account_number_textView" />

                <TextView
                    android:id="@+id/phone_textView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    android:text="@string/phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/account_number_textView" />

                <TextView
                    android:id="@+id/phone_details"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    app:layout_constraintBottom_toBottomOf="@id/phone_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/phone_textView"
                    tools:text="Phone Number" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@id/available_balance_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_textView" />

                <TextView
                    android:id="@+id/available_balance_textView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    android:text="@string/available_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_textView" />

                <TextView
                    android:id="@+id/available_balance_details"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    app:layout_constraintBottom_toBottomOf="@id/available_balance_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/available_balance_textView"
                    tools:text="Available Balance" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toTopOf="@id/current_balance_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/available_balance_textView" />

                <TextView
                    android:id="@+id/current_balance_textView"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"

                    android:text="@string/current_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/available_balance_textView" />

                <TextView
                    android:id="@+id/current_balance_details"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_between_elements"
                    app:layout_constraintBottom_toBottomOf="@id/current_balance_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/current_balance_textView"
                    tools:text="Current Balance" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/transfer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_card"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>